--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0",
-    "vuex-router-sync": "^3.0.0"
+    "vuex-router-sync": "^3.0.0",
+    "framework7-vue" : "^0.7.0",
+    "underscore" :"^1.8.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
